[package]
name = "krown"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.4"
di-rs = { version = "0.1.0", git = "https://github.com/byhowe/di-rs.git" }
libc = "0.2"
xcb-rs = "0.1.0"

[lib]
name = "krown"
path = "src/lib.rs"

[[bin]]
name = "krown"
path = "app/main.rs"
